--- a/projects/classicalGames/Connect4.html
+++ b/projects/classicalGames/Connect4.html
@@ -1,7 +1,52 @@
---- 
-layout: default
-title: Evan Colony
----
-<div>
+<!DOCTYPE html>
+<html>
 
-</div>
+<head>
+    <meta charset="UTF-8" />
+    <!-- Link to Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">    <!-- Link to fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
+    <!-- link to main stylesheet -->
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <title>My Website</title>
+</head>
+
+<body>
+    <header class="container">
+        <nav class="row">
+            <ul class="col-sm-8">
+                <li class="col-sm-1"><a href="/">Home</a></li>
+                <li class="col-sm-1"><a href="/about">About</a></li>
+                <li class="col-sm-1"><a href="/resume">Resume</a></li>
+                <li class="col-sm-3"><a href="/projects/">Projects</a></li>
+            </ul>
+            <!-- /.col-sm-8 -->
+        </nav>
+        <!-- /.row -->
+    </header>
+    <!-- /.container -->
+    
+    <!-- This is where content goes-->
+
+    <footer class="container">
+        <nav class="row">
+            <ul class="col-sm-12">
+                <li class="col-sm-2">
+                    <script language="JavaScript">
+                        var username = "abcd.abcd";
+                        var hostname = "abcd.edu";
+                        var linktext = username + "@" + hostname ;
+                        document.write("<a href='" + "mail" + "to:" + username + "@" + hostname + "'>" + linktext + "</a>");
+                    </script>
+                </li>
+                <li class="col-sm-2 pull-left"><a href="https://github.com/colonyevan">github.com/colonyevan</a></li>
+                <li class="pull-right"><a href="/site" title="About this site">About this site</a></li>
+            </ul>
+            <!-- col-sm-12 -->
+        </nav>
+        <!-- /.row -->
+    </footer>
+    <!-- /.container -->
+</body>
+
+</html>
