--- a/projects/index.html
+++ b/projects/index.html
@@ -44,8 +44,8 @@
         </header>
         <!-- /.container -->
         <div class="container">
+            <!-- This beings the current projects -->
             <div>
-                <!-- This beings the current projects -->
                 <div class="row">
                     <h1>Current Project</h1>
                 </div>
@@ -86,26 +86,68 @@
                         <a href="#">Connect 4</a>. Eventually I plan on using GLUT to make the
                         games visually appealing on top of functional. In addition to the
                         grapihcs, I also am attempting to implement an AI for all of these
-                        games, which is harder for some games than others.
+                        games, which is harder for some games than others. All of these games I
+                        create over time and often jump from one to another so I consider them
+                        all WiPs.
                     </p>
                 </div>
                 <!-- /.row -->
             </div>
             <!-- This ends the current projects -->
 
+            <!-- Begins the past projects -->
             <div>
-                <!-- Begins the past projects -->
                 <div class="row">
                     <h1>Past Projects</h1>
                 </div>
                 <!-- /.row -->
                 <div class="row">
-                    <h3></h3>
+                    <h3>EECS 183</h3>
+                </div>
+                <!-- /.row -->
+
+                <div class="row">
+                    <p>
+                        &emsp;There were five projects in this class, all of which were stubbed and
+                        relativley easy. This class was geared towards people with no previous
+                        programing expereince. Some noteble projects were OhHi and Coonnect 4
+                        (which is the connect 4 I continue to work on). For Honor code reasons
+                        the code cannot be shared.
+                    </p>
+                </div>
+                <!-- /.row -->
+
+                <div class="row">
+                    <h3>EECS 280</h3>
+                </div>
+                <!-- /.row -->
+
+                <div class="row">
+                    <p>
+                        &emsp;This class conatined 5 projects as well and these were more
+                        challanaging as they dealt with more challanging topics (image
+                        manipulation, machine learning, linked lists, complex classes, etc.).
+                        Again, for Honor Code reasons, this code may not be posted publically.
+                    </p>
+                </div>
+                <!-- /.row -->
+
+                <div class="row">
+                    <h3>Bits and Bobs</h3>
+                </div>
+                <!-- /.row -->
+
+                <div class="row">
+                    <p>
+                        &emsp;I have also worked on a number of random projects, the only notable one
+                        was used by a friend of mine to administer his prop-bet contest. See
+                        the github page <a href="#">here</a> to learn more about it.
+                    </p>
                 </div>
             </div>
             <!-- Ends past projects -->
         </div>
-        <!-- /.blurb -->
+        <!-- /.container -->
 
         <footer class="container">
             <nav class="row">
