Fixed styling in Resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -42,128 +42,131 @@
             </nav>
             <!-- /.row -->
         </header>
-
-        <div class="row">
-            <h1 class="col-sm-6">Resume</h1>
-            <p class="col-sm-6 pull-right" id="head">Evan Colony</p>
-        </div>
-        <!-- /.row -->
-        <div class="resume">
+        <div class="container">
             <div class="row">
-                <div class="col-sm-1"></div>
-                <div class="col-sm-5">
-                    <h2>Education</h2>
-                    <h3>University Of Michigan</h3>
-                    <p id="Resume"><i>Ross School of Business</i></p>
-                    <p id="Resume">Bachelors of Business Administration</p>
-                    <p id="Resume">Fall 2017 - Present</p>
-                    <ul>
-                        <li>3.925/4.0 GPA</li>
-                        <li>Emphasis in strategy</li>
-                        <li>Business Analyst, Atlas Consulting Group</li>
-                        <li>Member, Michigan Business Club</li>
-                    </ul>
-                    <p id="Resume"><i>School of Literature, Science and the Arts</i></p>
-                    <p id="Resume">Fall 2017 - Present</p>
-                    <ul>
-                        <li>Minor in Computer Science</li>
-                    </ul>
-                    <p id="Resume">Other Activities</p>
-                    <ul>
-                        <li>Involved in MLead</li>
-                    </ul>
-                    <h3>Muscatine Community College</h3>
-                    <p id="Resume">Fall 2014 - Spring 2017</p>
-                    <ul>
-                        <li>Studies in Computer Science and Business</li>
-                        <li>Dual-Enrolled throughout high school</li>
-                    </ul>
-                    <h3>Muscatine High School</h3>
-                    <p id="Resume">Fall 2013 - Spring 2017</p>
-                    <ul>
-                        <li>4.0/4.0 GPA</li>
-                        <li>1 of 349 in my gradutating class</li>
-                        <li>
-                            AP Scholar with Distinction, Excellence in Education Award
-                            Recipient, 8-semester Honor Roll Student.
-                        </li>
-                        <li>
-                            Involved in Student Council (multipe committee positions), Peer
-                            Tutoring (president), National Honors Society, and Soccer.
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.col-sm-5 -->
-
-                <div class="col-sm-5">
-                    <h2>Experience</h2>
-                    <h3>Carver Pump Company</h3>
-                    <p id="Resume">April - August 2018</p>
-                    <p id="Resume">Summer Marketing and Sales Intern</p>
-                    <ul>
-                        <li>
-                            Pioneered new inventory program using self-developed Monte Carlo
-                            simulation in Excel with VBA, resulting in 94% decrease in lead
-                            times on $2.5 million annual product line
-                        </li>
-                        <li>
-                            Created effective tool to analyze individual gross margins on over
-                            $25 million of merchandise using Power BI, allowing for new
-                            insights into multiple product lines
-                        </li>
-                        <li>
-                            Interacted with all departments of $35 million manufacturing
-                            business shipping internationally, ensuring comprehensive business
-                            learning experience
-                        </li>
-                    </ul>
-                    <h3>Hy-Vee</h3>
-                    <p id="Resume">June 2017 - August 2018</p>
-                    <p id="Resume">Cashier</p>
-                    <ul>
-                        <li>Rapidly promoted from courtesy clerk to cashier</li>
-                        <li>Often asked to preform management level tasks</li>
-                    </ul>
-                    <h2>Skills, Strengths, and Intersts</h2>
-                    <h3>Skills</h3>
-                    <p id="Resume">Proficent in Microsoft Office</p>
-                    <h4>Langauges</h4>
-                    <ul>
-                        <li>Past studies in Mandarin</li>
-                        <li>C++, HTML, CSS</li>
-                    </ul>
-                    <h2>Strengths</h2>
-                    <ul>
-                        <li>
-                            Effective <b>LEADER</b> with strong analytical skills and superior
-                            multitasking abilities, capable of seeing both “big picture” and
-                            handling minutiae
-                        </li>
-                        <li>
-                            Strong <b>TEAM PLAYER</b> with positive record for building lasting
-                            professional relationships with diverse groups and individuals
-                        </li>
-                        <li>
-                            Experienced <b>ARBITRATOR</b> with demonstrated ability to
-                            communicate effectively while maintaining objectivity and
-                            sensitivity
-                        </li>
-                        <li>
-                            Skilled <b>WORKER</b> with advanced knowledge of computers, both
-                            software and hardware
-                        </li>
-                    </ul>
-                    <h2>Intersts</h2>
-                    <ul>
-                        <li>Computer construction, Web Development, and programming</li>
-                        <li>Business and its intersections with technology</li>
-                    </ul>
-                </div>
-                <!-- /.col-sm-5 -->
-
-                <div class="col-sm-1"></div>
+                <h1 class="col-sm-6">Resume</h1>
+                <p class="col-sm-6 pull-right" id="head">Evan Colony</p>
             </div>
             <!-- /.row -->
+            <div class="resume">
+                <div class="row">
+                    <div class="col-sm-1"></div>
+                    <div class="col-sm-5">
+                        <h2>Education</h2>
+                        <h3>University Of Michigan</h3>
+                        <p id="Resume"><i>Ross School of Business</i></p>
+                        <p id="Resume">Bachelors of Business Administration</p>
+                        <p id="Resume">Fall 2017 - Present</p>
+                        <ul>
+                            <li>3.925/4.0 GPA</li>
+                            <li>Emphasis in strategy</li>
+                            <li>Business Analyst, Atlas Consulting Group</li>
+                            <li>Member, Michigan Business Club</li>
+                        </ul>
+                        <p id="Resume"><i>School of Literature, Science and the Arts</i></p>
+                        <p id="Resume">Fall 2017 - Present</p>
+                        <ul>
+                            <li>Minor in Computer Science</li>
+                        </ul>
+                        <p id="Resume">Other Activities</p>
+                        <ul>
+                            <li>Involved in MLead</li>
+                        </ul>
+                        <h3>Muscatine Community College</h3>
+                        <p id="Resume">Fall 2014 - Spring 2017</p>
+                        <ul>
+                            <li>Studies in Computer Science and Business</li>
+                            <li>Dual-Enrolled throughout high school</li>
+                        </ul>
+                        <h3>Muscatine High School</h3>
+                        <p id="Resume">Fall 2013 - Spring 2017</p>
+                        <ul>
+                            <li>4.0/4.0 GPA</li>
+                            <li>1 of 349 in my gradutating class</li>
+                            <li>
+                                AP Scholar with Distinction, Excellence in Education Award
+                                Recipient, 8-semester Honor Roll Student.
+                            </li>
+                            <li>
+                                Involved in Student Council (multipe committee positions), Peer
+                                Tutoring (president), National Honors Society, and Soccer.
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- /.col-sm-5 -->
+
+                    <div class="col-sm-5">
+                        <h2>Experience</h2>
+                        <h3>Carver Pump Company</h3>
+                        <p id="Resume">April - August 2018</p>
+                        <p id="Resume">Summer Marketing and Sales Intern</p>
+                        <ul>
+                            <li>
+                                Pioneered new inventory program using self-developed Monte
+                                Carlo simulation in Excel with VBA, resulting in 94% decrease
+                                in lead times on $2.5 million annual product line
+                            </li>
+                            <li>
+                                Created effective tool to analyze individual gross margins on
+                                over $25 million of merchandise using Power BI, allowing for
+                                new insights into multiple product lines
+                            </li>
+                            <li>
+                                Interacted with all departments of $35 million manufacturing
+                                business shipping internationally, ensuring comprehensive
+                                business learning experience
+                            </li>
+                        </ul>
+                        <h3>Hy-Vee</h3>
+                        <p id="Resume">June 2017 - August 2018</p>
+                        <p id="Resume">Cashier</p>
+                        <ul>
+                            <li>Rapidly promoted from courtesy clerk to cashier</li>
+                            <li>Often asked to preform management level tasks</li>
+                        </ul>
+                        <h2>Skills, Strengths, and Intersts</h2>
+                        <h3>Skills</h3>
+                        <p id="Resume">Proficent in Microsoft Office</p>
+                        <h4>Langauges</h4>
+                        <ul>
+                            <li>Past studies in Mandarin</li>
+                            <li>C++, HTML, CSS</li>
+                        </ul>
+                        <h2>Strengths</h2>
+                        <ul>
+                            <li>
+                                Effective <b>LEADER</b> with strong analytical skills and
+                                superior multitasking abilities, capable of seeing both “big
+                                picture” and handling minutiae
+                            </li>
+                            <li>
+                                Strong <b>TEAM PLAYER</b> with positive record for building
+                                lasting professional relationships with diverse groups and
+                                individuals
+                            </li>
+                            <li>
+                                Experienced <b>ARBITRATOR</b> with demonstrated ability to
+                                communicate effectively while maintaining objectivity and
+                                sensitivity
+                            </li>
+                            <li>
+                                Skilled <b>WORKER</b> with advanced knowledge of computers,
+                                both software and hardware
+                            </li>
+                        </ul>
+                        <h2>Intersts</h2>
+                        <ul>
+                            <li>Computer construction, Web Development, and programming</li>
+                            <li>Business and its intersections with technology</li>
+                        </ul>
+                    </div>
+                    <!-- /.col-sm-5 -->
+
+                    <div class="col-sm-1"></div>
+                </div>
+                <!-- /.row -->
+            </div>
+            <!-- /.container -->
         </div>
         <!-- /.resume -->
         <footer class="container">
