--- a/site/index.html
+++ b/site/index.html
@@ -44,7 +44,7 @@
         </header>
 
         <!-- /.container -->
-        <div class="blurb">
+        <div class="container">
             <h1>About this Site</h1>
             <p>This website is hosted on Github</p>
             <p>I have styled this with bootstrap</p>
