Resume change for ssh confo

--- a/resume/index.html
+++ b/resume/index.html
@@ -60,7 +60,7 @@
                         <ul>
                             <li>3.925/4.0 GPA</li>
                             <li>Emphasis in strategy</li>
-                            <li>Business Analyst, Atlas Consulting Group</li>
+                            <li>VP of Clients, Atlas Consulting Group</li>
                             <li>Member, Michigan Business Club</li>
                         </ul>
                         <p id="Resume"><i>School of Literature, Science and the Arts</i></p>
